<resources>
    <string name="app_name">Helping Hands</string>
    <string name="emergency_button">Emergency Button</string>
    <string name="magnify">Magnify</string>
    <string name="pill_reminder">Pill Reminder</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom out</string>
    <string name="read_for_me">Read For me</string>
    <string name="back">Back</string>
    <string name="notes">Notes</string>
    <string name="closeapp">closeapp</string>
    <string name="Notes">notes</string>
    <string name="search_note">Search Note</string>
    <string name="note_title">Note Title</string>
    <string name="Note_Subtitle">Note Subtitle</string>
    <string name="type_here">Type Here...</string>
    <string name="Miscellaneous">Miscellaneous</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete">Are You Sure You Want To Delete?</string>
    <string name="pick_a_color">Pick A Color</string>
    <string name="turn_on_flash">Turn On Flash</string>
    <string name="title_medicine_name">Medicine Name</string>
    <string name="hint_enter_med_name">Enter Medicine</string>
    <string name="Sunday">S</string>
    <string name="Monday">M</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="Tuhrsday">T</string>
    <string name="Friday">F</string>
    <string name="Saturday">S</string>
    <string name="every_day">Every Day</string>
    <string name="add_button_pill">Click the add button to add pill reminder</string>
    <string name="reminder">Reminder</string>
    <string name="_1_0">1.0</string>
    <string name="enter_medicine_name">Enter Medicine Name</string>
    <string name="medicine_days">Medicine Days</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="no_medecine_added">NO MEDICINE ADDED</string>
    <string name="ignored">IGNORED</string>
    <string name="loading_tasks_error">Error while loading medicineAlarms</string>
    <string name="successfully_saved_me_message">Medicine Added Successfully</string>
    <string name="successfully_deleted_message">Medicine deleted Successfully</string>
    <string name="no_medicine_added">No Medicine Added</string>
    <string name="taken">TAKEN</string>
    <string name="all">ALL</string>
    <string name="menu_filter">Filter</string>
    <string name="all_label">All Medicines</string>
    <string name="ignore_label">Medicines Ignored</string>
    <string name="taken_label">Medicine Taken</string>
    <string name="no_history">No History Found</string>
    <string name="no_taken_med_history">You have not taken any medicine</string>
    <string name="no_ignored_history">Well Done</string>
    <string name="menu_stats">Monthly Report</string>
    <string name="reminder_message">It\'s time to take your medicine!</string>
    <string name="title_activity_location_app">Map</string>
    <string name="add_contact_list">Add Contact List</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="add_Phone">Add</string>
    <string name="delete_phone">Delete</string>
    <string name="view_phone">View</string>
    <string name="nb">NB: To delete a number, enter the number and click the red delete button</string>
    <string name="how_to_navigate">Instructions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="add_reminder_details">Add Reminder + details</string>
</resources>