...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ContactList"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/add_contact_list"
...
        android:text="@string/how_to_navigate"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Pill"/>
    <Button
        android:id="@+id/Emergency"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginStart="@dimen/_150sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:layout_marginTop="0dp"
...
